app/javascript/src/pages/_show.scss
$body-background-alt: darken($body-background, 1);

$spiral-gradient: radial-gradient(circle at 100% 150%, $body-background 24%, $body-background-alt 24%, $body-background-alt 28%, $body-background 28%, $body-background 36%, $body-background-alt 36%, $body-background-alt 40%, transparent 40%, transparent),
radial-gradient(circle at 0    150%, $body-background 24%, $body-background-alt 24%, $body-background-alt 28%, $body-background 28%, $body-background 36%, $body-background-alt 36%, $body-background-alt 40%, transparent 40%, transparent),
radial-gradient(circle at 50%  100%, $body-background-alt 10%, $body-background 10%, $body-background 23%, $body-background-alt 23%, $body-background-alt 30%, $body-background 30%, $body-background 43%, $body-background-alt 43%, $body-background-alt 50%, $body-background 50%, $body-background 63%, $body-background-alt 63%, $body-background-alt 71%, transparent 71%, transparent),
radial-gradient(circle at 100% 50%, $body-background-alt 5%, $body-background 5%, $body-background 15%, $body-background-alt 15%, $body-background-alt 20%, $body-background 20%, $body-background 29%, $body-background-alt 29%, $body-background-alt 34%, $body-background 34%, $body-background 44%, $body-background-alt 44%, $body-background-alt 49%, transparent 49%, transparent),
radial-gradient(circle at 0    50%, $body-background-alt 5%, $body-background 5%, $body-background 15%, $body-background-alt 15%, $body-background-alt 20%, $body-background 20%, $body-background 29%, $body-background-alt 29%, $body-background-alt 34%, $body-background 34%, $body-background 44%, $body-background-alt 44%, $body-background-alt 49%, transparent 49%, transparent);

// Animations
@keyframes float {
  0% {
    text-shadow: 0px 0px 3px rgba(0,0,0,0.2);
    font-size: 1.75rem;;
  }
  50% {
    text-shadow: 0px 5px 3px rgba(0,0,0,0.1);
    font-size: 1.85rem;
  }
  100% {
    text-shadow: 0px 0px 3px rgba(0,0,0,0.2);
    font-size: 1.75rem;
  }
}

@keyframes shine{
  10% {
   opacity: 0.25;
   width: 100%;
   transition-property: width, opacity;
   transition-duration: 0.7s, 0.15s;
   transition-timing-function: ease;
  }
  100% {
   opacity: 0;
   width: 0%;
   transition-property: width, opacity;
  }
}

// THE STYLES 👩‍🎨

// The actual search distance input should be hidden
.search-distance-input {
  visibility: hidden;
  height: 0;
  margin: 0;
  padding: 0;
}

// All styles declared as children of the main class
.show-advertisement {

  .show-page-container {
    margin-top: 1rem !important;
  }

  @include breakpoint(small only) {
    margin-top: 3rem;
    margin-bottom: calc(65px + 2rem);
  }

  .left-column {

    margin-top: 1rem;
    padding-top: 0rem;
    padding-bottom: 0rem;

    @include breakpoint(large) {
      min-width:400px;
      max-width:400px;
    }

    .map-container {
      padding-top: .75rem;

      @include breakpoint(small) {
        margin-top: 0px;
      }

      #js-small-map {
        border: 2px solid $white;
        outline: 1px solid $medium-gray;

        &.show-page-small-map {
          .material-icons {
            visibility: hidden;
          }
        }
      }
    }

    .contact-container {
      margin-top: 0px;
      padding-top: 10px;
      padding-bottom: 0px;

      dd a {
        font-size: $small-font-size;
        font-weight: bold;
      }

    }

    .information-container {
      padding-top: 10px;
      padding-bottom: 0px;
      word-wrap: break-word;

      dd a {
        font-size: $small-font-size;
        font-weight: bold;
      }

      @include breakpoint(small) {
        margin-top: 0px !important;
      }

      @include breakpoint(medium) {
        margin-top: 0px !important;
      }

      @include breakpoint(large) {
        margin-top: 0px !important;
      }
    }
  }

  .center-column {

    .emoji-tags {
      display: inline-block;

      a {

        z-index: 998;
        border: 1px solid $light-gray;

        span {
          z-index: 999;
        }

        padding-top: .5rem;
        text-align: center;
        position: relative;

        background: $warning-color;
        background:
        linear-gradient(115deg, transparent 75%, lighten($warning-color, 3) 75%) 0 0,
        linear-gradient(245deg, transparent 75%, lighten($warning-color, 3) 75%) 0 0,
        linear-gradient(115deg, transparent 75%, lighten($warning-color, 3) 75%) 7px -15px,
        linear-gradient(245deg, transparent 75%, lighten($warning-color, 3) 75%) 7px -15px,
        $warning-color;
        background-size: 15px 30px;

        &:hover {
          background: darken($warning-color, 3);
          background:
          linear-gradient(115deg, transparent 75%, darken($warning-color, 5) 75%) 0 0,
          linear-gradient(245deg, transparent 75%, darken($warning-color, 5) 75%) 0 0,
          linear-gradient(115deg, transparent 75%, darken($warning-color, 5) 75%) 7px -15px,
          linear-gradient(245deg, transparent 75%, darken($warning-color, 5) 75%) 7px -15px,
          darken($warning-color, 3);
          background-size: 15px 30px;

          &:after {
            animation: none;
            animation-fill-mode: none;
            height: 0;
            width: 0;
          }

        }

        &:after {

          animation: shine 2s ease-out  infinite;
          animation-fill-mode: forwards;
          content: "";
          position: absolute;
          top: 0;
          left: 12px;
          width: 100%;
          height: 100%;
          opacity: 0;

          background: rgba(255, 255, 255, 0.13);
          background: linear-gradient(
            to right,
            rgba(255, 255, 255, 0.13) 0%,
            rgba(255, 255, 255, 0.13) 77%,
            rgba(255, 255, 255, 0.5) 92%,
            rgba(255, 255, 255, 0.0) 100%
          );
        }
      }
    }

    .heading-container {

      margin-top: 1rem;
      margin-bottom: 0rem;

      svg {
        color: $primary-color !important;
        width: 100%;
        padding-top: .5rem;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
      }

      #js-add-bookmark {
        text-align: right;
      }

      .material-icons {
        padding-top: 1rem;
        color: $secondary-color;
        font-size: 3rem;
        cursor: pointer;
      }

    }

    @include breakpoint(small) {

    }

    @include breakpoint(medium) {
      .heading-container {

        h1 {
          margin-bottom: 3px;
          font-size: 2.4rem;
        }

      }

      .emoji {
        text-align: right;
      }
    }

    @include breakpoint(large) {
      .heading-container {
        margin-top: 17px;

        h1 {
          margin-bottom: 3px;
          font-size: 2.4rem;
        }

      }

      .emoji {
        text-align: right;
      }
    }

    .poster-controls {

      a {
        font-size: $small-font-size;
        font-weight: bold;
      }
    }

    .emoji-reacts {

      display: inline-block;
      margin-bottom: 0px;
      vertical-align: text-bottom;

      .label {

        cursor: pointer;
        transition: all .05s ease-in-out;

        &.new-reaction {
          background-color: #495567;
          border: none !important;
          outline: none !important;
          color: white !important;
          margin-bottom: 0px;
          width: 100%;
          text-align: center;
          padding: 17px;

          &:hover {
            background-color: darken(#495567, 5);
          }
        }

        &.emoji {
          border: 1px solid darken($warning-color, 5);
          outline: 1px solid lighten($alert-color, 15);
          font-size: 2.25rem;
          margin-bottom: 4px;
        }

      }

      @include breakpoint(medium) {
        .label {

          cursor: pointer;
          color: $primary-color !important;
          transition: all .05s ease-in-out;
          font-weight: bold;

          &.new-reaction {
            padding: 0.33333rem 0.5rem;
            width: auto !important;
          }

          &.emoji {
            font-size: 2.25rem;
            margin-bottom: 4px;
          }
        }
      }

      @include breakpoint(large) {
        .label {

          cursor: pointer;
          color: $primary-color !important;
          transition: all .05s ease-in-out;
          font-weight: bold;

          &.new-reaction {
            padding: 0.33333rem 0.5rem;
            width: auto !important;
          }

          &.emoji {
            font-size: 2.25rem;
            margin-bottom: 4px;
          }
        }
      }

    }

    .reacts-at-bottom {

      p {
        font-weight: bold;
      }

      font-size: $small-font-size;
      color: grey;

    }

    .emoji-react-container {
      padding-bottom: 1rem;
    }

    .view-counter {
      font-size: 0.75em;
      font-weight: bold;
      color: grey;
    }

  }

  .right-column {

    .images-container {

      padding-top: 0.75rem;

      .packery-item {
        img {
          border: 2px solid white;
          outline: 1px solid $medium-gray;
          width: 100%;

          &:hover {
            cursor: pointer;
            border: 2px solid $primary-color;
            outline: 1px solid $primary-color;
          }
        }
      }

      @include breakpoint(small) {
        margin-top: 0px;

        .gutter-sizer {
          width: 1rem;
        }

        .packery-item {
          width: 100%;
        }

      }

      @include breakpoint(medium) {
        margin-top: 17px;

        .gutter-sizer {
          width: 1rem;
        }

        .packery-item {
          width: 100%;
        }
      }

      @include breakpoint(large) {
        margin-top: 17px;

        .gutter-sizer {
          width: calc(2rem / 2);
        }

        .packery-item {
          width: calc(33.2345% - (2rem / 3));
        }
      }
    }
  }
}

#modal {
  background: $spiral-gradient;
  background-size: 100px 50px;
}

.carousel-cell {
  width: 100%; /* full width */
  margin-top: 8vh;
  height: 80vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

.carousel-cell img {
  border: 1px solid $medium-gray;
  display: block;
  max-height: 100%;
}

.information {

  .success, .primary {
    color: white;
  }

  .warning {
    color: $primary-color;
  }
}

